--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
         </li>
         
          <li class="nav-item"></li>
-         <a class="nav-link" href="#">Contact</a>
+         <a class="nav-link" href="contact.html">Contact</a>
          </li>
         
       </ul>
