--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div id="menu-container"></div>
     <!----image---->
 <img src="img/banner.jpg" class="img-fluid " width="100%" alt="....">
+
+<div class="contact">
+    
     <!--เนื้อหา-->
     <div class="px-4 py-5 my-5 text-center"> <img class="d-block mx-auto mb-4" src="/img/bootstrap-logo.svg" alt=""
             width="72" height="57">
@@ -66,7 +69,7 @@
             </div>
         </div>
     </div>
-
+</div>
 </body>
 
 </html>
