--- a/product.html
+++ b/product.html
@@ -23,8 +23,7 @@
     </div>
     <div class="card-footer">
          <small class="text-danger">Price:  1000 บาท </small> &nbsp;
-         <button class="btn btn-primary" type="submit">Add</button>
-
+       <a href="detail.html"> <button class="btn btn-primary" type="submit">รายระเอียด</button> </a> 
       </div>
     </div>
 </div>
@@ -37,7 +36,7 @@
     </div>
     <div class="card-footer">
          <small class="text-danger">Price:  800,000 บาท </small> &nbsp;
-         <button class="btn btn-primary" type="submit">Add</button>
+         <a href="detail.html"> <button class="btn btn-primary" type="submit">รายระเอียด</button> </a> 
 
       </div>
     </div>
@@ -51,7 +50,7 @@
     </div>
     <div class="card-footer">
          <small class="text-danger">Price:  500,000 บาท </small> &nbsp;
-         <button class="btn btn-primary" type="submit">Add</button>
+ <a href="detail.html"> <button class="btn btn-primary" type="submit">รายระเอียด</button> </a> 
       </div>
     </div>
 </div>
@@ -64,8 +63,7 @@
     </div>
     <div class="card-footer">
          <small class="text-danger">Price:  80,000 บาท </small> &nbsp;
-         <button class="btn btn-primary" type="submit">Add</button>
-
+ <a href="detail.html"> <button class="btn btn-primary" type="submit">รายระเอียด</button> </a> 
       </div>
     </div>
 </div>
@@ -82,8 +80,7 @@
     </div>
     <div class="card-footer">
          <small class="text-danger">Price:  1000 บาท </small> &nbsp;
-         <button class="btn btn-primary" type="submit">Add</button>
-
+ <a href="detail.html"> <button class="btn btn-primary" type="submit">รายระเอียด</button> </a> 
       </div>
     </div>
 </div>
@@ -96,8 +93,7 @@
     </div>
     <div class="card-footer">
          <small class="text-danger">Price:  800,000 บาท </small> &nbsp;
-         <button class="btn btn-primary" type="submit">Add</button>
-
+ <a href="detail.html"> <button class="btn btn-primary" type="submit">รายระเอียด</button> </a> 
       </div>
     </div>
 </div>
@@ -110,7 +106,7 @@
     </div>
     <div class="card-footer">
          <small class="text-danger">Price:  500,000 บาท </small> &nbsp;
-         <button class="btn btn-primary" type="submit">Add</button>
+          <a href="detail.html"> <button class="btn btn-primary" type="submit">รายระเอียด</button> </a> 
       </div>
     </div>
 </div>
@@ -123,8 +119,7 @@
     </div>
     <div class="card-footer">
          <small class="text-danger">Price:  80,000 บาท </small> &nbsp;
-         <button class="btn btn-primary" type="submit">Add</button>
-
+ <a href="detail.html"> <button class="btn btn-primary" type="submit">รายระเอียด</button> </a> 
       </div>
     </div>
 </div>
@@ -141,8 +136,7 @@
     </div>
     <div class="card-footer">
          <small class="text-danger">Price:  1000 บาท </small> &nbsp;
-         <button class="btn btn-primary" type="submit">Add</button>
-
+ <a href="detail.html"> <button class="btn btn-primary" type="submit">รายระเอียด</button> </a> 
       </div>
     </div>
 </div>
@@ -155,8 +149,7 @@
     </div>
     <div class="card-footer">
          <small class="text-danger">Price:  800,000 บาท </small> &nbsp;
-         <button class="btn btn-primary" type="submit">Add</button>
-
+ <a href="detail.html"> <button class="btn btn-primary" type="submit">รายระเอียด</button> </a> 
       </div>
     </div>
 </div>
@@ -169,8 +162,8 @@
     </div>
     <div class="card-footer">
          <small class="text-danger">Price:  500,000 บาท </small> &nbsp;
-         <button class="btn btn-primary" type="submit">Add</button>
-      </div>
+ <a href="detail.html"> <button class="btn btn-primary" type="submit">รายระเอียด</button> </a> 
+     </div>
     </div>
 </div>
 <div class="col-md-3  p-4 text-center">
@@ -182,8 +175,7 @@
     </div>
     <div class="card-footer">
          <small class="text-danger">Price:  80,000 บาท </small> &nbsp;
-         <button class="btn btn-primary" type="submit">Add</button>
-
+ <a href="detail.html"> <button class="btn btn-primary" type="submit">รายระเอียด</button> </a> 
       </div>
     </div>
 </div>
